crates/ark/src/lsp/snapshots/ark__lsp__symbols__tests__symbol_assignment_function_nested_section.snap
---
source: crates/ark/src/lsp/symbols.rs
expression: "test_symbol(\"\n## title0 ----\nfoo <- function() {\n  # title1 ----\n  ### title2 ----\n  ## title3 ----\n  # title4 ----\n}\n# title5 ----\")"
---
[
    DocumentSymbol {
        name: "title0",
        detail: None,
        kind: String,
        tags: None,
        deprecated: None,
        range: Range {
            start: Position {
                line: 1,
                character: 0,
            },
            end: Position {
                line: 7,
                character: 1,
            },
        },
        selection_range: Range {
            start: Position {
                line: 1,
                character: 0,
            },
            end: Position {
                line: 7,
                character: 1,
            },
        },
        children: Some(
            [
                DocumentSymbol {
                    name: "foo",
                    detail: Some(
                        "function()",
                    ),
                    kind: Function,
                    tags: None,
                    deprecated: None,
                    range: Range {
                        start: Position {
                            line: 2,
                            character: 0,
                        },
                        end: Position {
                            line: 7,
                            character: 1,
                        },
                    },
                    selection_range: Range {
                        start: Position {
                            line: 2,
                            character: 0,
                        },
                        end: Position {
                            line: 7,
                            character: 1,
                        },
                    },
                    children: Some(
                        [
                            DocumentSymbol {
                                name: "title1",
                                detail: None,
                                kind: String,
                                tags: None,
                                deprecated: None,
                                range: Range {
                                    start: Position {
                                        line: 3,
                                        character: 2,
                                    },
                                    end: Position {
                                        line: 5,
                                        character: 16,
                                    },
                                },
                                selection_range: Range {
                                    start: Position {
                                        line: 3,
                                        character: 2,
                                    },
                                    end: Position {
                                        line: 5,
                                        character: 16,
                                    },
                                },
                                children: Some(
                                    [
                                        DocumentSymbol {
                                            name: "title2",
                                            detail: None,
                                            kind: String,
                                            tags: None,
                                            deprecated: None,
                                            range: Range {
                                                start: Position {
                                                    line: 4,
                                                    character: 2,
                                                },
                                                end: Position {
                                                    line: 4,
                                                    character: 17,
                                                },
                                            },
                                            selection_range: Range {
                                                start: Position {
                                                    line: 4,
                                                    character: 2,
                                                },
                                                end: Position {
                                                    line: 4,
                                                    character: 17,
                                                },
                                            },
                                            children: Some(
                                                [],
                                            ),
                                        },
                                        DocumentSymbol {
                                            name: "title3",
                                            detail: None,
                                            kind: String,
                                            tags: None,
                                            deprecated: None,
                                            range: Range {
                                                start: Position {
                                                    line: 5,
                                                    character: 2,
                                                },
                                                end: Position {
                                                    line: 5,
                                                    character: 16,
                                                },
                                            },
                                            selection_range: Range {
                                                start: Position {
                                                    line: 5,
                                                    character: 2,
                                                },
                                                end: Position {
                                                    line: 5,
                                                    character: 16,
                                                },
                                            },
                                            children: Some(
                                                [],
                                            ),
                                        },
                                    ],
                                ),
                            },
                            DocumentSymbol {
                                name: "title4",
                                detail: None,
                                kind: String,
                                tags: None,
                                deprecated: None,
                                range: Range {
                                    start: Position {
                                        line: 6,
                                        character: 2,
                                    },
                                    end: Position {
                                        line: 6,
                                        character: 15,
                                    },
                                },
                                selection_range: Range {
                                    start: Position {
                                        line: 6,
                                        character: 2,
                                    },
                                    end: Position {
                                        line: 6,
                                        character: 15,
                                    },
                                },
                                children: Some(
                                    [],
                                ),
                            },
                        ],
                    ),
                },
            ],
        ),
    },
    DocumentSymbol {
        name: "title5",
        detail: None,
        kind: String,
        tags: None,
        deprecated: None,
        range: Range {
            start: Position {
                line: 8,
                character: 0,
            },
            end: Position {
                line: 8,
                character: 13,
            },
        },
        selection_range: Range {
            start: Position {
                line: 8,
                character: 0,
            },
            end: Position {
                line: 8,
                character: 13,
            },
        },
        children: Some(
            [],
        ),
    },
]
