crates/ark/src/lsp/snapshots/ark__lsp__symbols__tests__symbol_rhs.snap
---
source: crates/ark/src/lsp/symbols.rs
expression: "test_symbol(\"\n# section ----\nclass <- r6::r6class(\n  'class',\n  public = list(\n    initialize = function() 'initialize',\n    foo = function() 'foo'\n  ),\n  private = list(\n    bar = function() 'bar'\n  )\n)\n\")"
---
[
    DocumentSymbol {
        name: "section",
        detail: None,
        kind: String,
        tags: None,
        deprecated: None,
        range: Range {
            start: Position {
                line: 1,
                character: 0,
            },
            end: Position {
                line: 11,
                character: 1,
            },
        },
        selection_range: Range {
            start: Position {
                line: 1,
                character: 0,
            },
            end: Position {
                line: 11,
                character: 1,
            },
        },
        children: Some(
            [
                DocumentSymbol {
                    name: "class",
                    detail: None,
                    kind: Variable,
                    tags: None,
                    deprecated: None,
                    range: Range {
                        start: Position {
                            line: 2,
                            character: 0,
                        },
                        end: Position {
                            line: 2,
                            character: 5,
                        },
                    },
                    selection_range: Range {
                        start: Position {
                            line: 2,
                            character: 0,
                        },
                        end: Position {
                            line: 2,
                            character: 5,
                        },
                    },
                    children: Some(
                        [],
                    ),
                },
            ],
        ),
    },
]
